<resources>
    <string name="app_name">POSS</string>
    <string name="description">(Pomade style hair`s)</string>
    <string name="pomade_style">포마드 스타일</string>
    <string name="pomade_brand">포마드 제품</string>
    <string name="pomade_style_description">포마드 스타일에 대해 알아보세요!</string>
    <string name="brand_description">포마드 제품 종류에 대해 알아보세요!</string>
    <string name="pomade_store">매장 정보</string>
    <string name="store_description">바버샵 매장에 대해 알아보세요!</string>
    <string name="extra_images">어울리는 수염</string>
    <string name="hair_method">손질 방법</string>
    <string name="detail">자세히</string>
    <string name="evaluation">평가</string>
    <string name="setting">세팅력</string>
    <string name="gojung">고정력</string>
    <string name="balim">발림성</string>
    <string name="shining">광택성</string>
    <string name="location">위치 정보</string>
</resources>